# django-require-i18n

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: Makefile  conf.py  development.rst  index.rst  make.bat  tutorial.rst
require_i18n/: __init__.py  core.py  util.py
require_i18n/management/commands/: __init__.py  compile_js.py
require_i18n/tests/: settings.py  test_commands.py  test_util.py  urls.py
require_i18n/tests/locale/nl/LC_MESSAGES/: site.po
require_i18n/tests/locale/templates/LC_MESSAGES/: site.pot
require_i18n/tests/static/js/site/nls/: bar.js
require_i18n/tests/static/js/site/nls/nl/: bar.js
require_i18n/tests/static/js/site/nls/root/: bar.js  foo.js
require_i18n/tests/static/js/test/nls/: colors.js
require_i18n/tests/static/js/test/nls/root/: colors.js  fruits.js
requirements/: production.txt  testing.txt
