[metadata]
description-file = README.rst

[flake8]
ignore = E121, E122, E124, E125, E127, E128, E131, E241, E402, E501, E731, E722, W504, W605
exclude =
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc/*